--- a/action.yml
+++ b/action.yml
@@ -51,10 +51,9 @@ runs:
     with:
       dotnet-version: 5.0.x
     
-  - name: Add Github Source
-    #run: dotnet nuget add source --username ${{ inputs.User }} --password ${{ inputs.Password }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ inputs.Owner }}/index.json"
-    run: dotnet nuget add source --username ${{ inputs.Owner }} --password ${{ inputs.Password }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ inputs.Owner }}/index.json"
-    shell: bash
+#  - name: Add Github Source
+#    run: dotnet nuget add source --username ${{ inputs.Owner }} --password ${{ inputs.Password }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ inputs.Owner }}/index.json"
+#    shell: bash
 
   - name: Restore dependencies
     run: nuget restore ${{ inputs.SolutionName }}
