--- a/action.yml
+++ b/action.yml
@@ -50,10 +50,12 @@ runs:
     uses: actions/setup-dotnet@v2
     with:
       dotnet-version: 5.0.x
-      source-url: "https://nuget.pkg.github.com/${{ inputs.Owner }}/index.json"
-    env:
-      NUGET_AUTH_TOKEN: ${{ inputs.Password }}
-    
+#      source-url: "https://nuget.pkg.github.com/${{ inputs.Owner }}/index.json"
+#    env:
+#      NUGET_AUTH_TOKEN: ${{ inputs.Password }}
+   - name: Add Github Source
+     shell: bash
+     run: dotnet nuget add source "https://nuget.pkg.github.com/${{ inputs.Owner }}/index.json" --name github --username ${{ inputs.Owner }} --password ${{ inputs.Password }} --store-password-in-clear-text
 #  - name: Add Github Source
 #    run: dotnet nuget add source --username ${{ inputs.Owner }} --password ${{ inputs.Password }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ inputs.Owner }}/index.json"
 #    shell: bash
