--- a/action.yml
+++ b/action.yml
@@ -50,9 +50,13 @@ runs:
     uses: actions/setup-dotnet@v2
     with:
       dotnet-version: 5.0.x
-#      source-url: "https://nuget.pkg.github.com/${{ inputs.Owner }}/index.json"
-#    env:
-#      NUGET_AUTH_TOKEN: ${{ inputs.Password }}
+      source-url: "https://nuget.pkg.github.com/${{ inputs.Owner }}/index.json"
+    env:
+      NUGET_AUTH_TOKEN: ${{ inputs.Password }}
+      
+  - name: Add nuget.org
+    shell: bash
+    run: dotnet nuget add source "https://api.nuget.org/v3/index.json"
 
 #  - name: Add Github Source
 #    shell: bash
