--- a/action.yml
+++ b/action.yml
@@ -48,7 +48,7 @@ runs:
     
   - name: Setup .NET
     env:
-      avgNugetRepoKey: ${{ inputs.Password }}
+      avgNugetRepoKey: ${{ inputs.NugetTkn }}
     uses: actions/setup-dotnet@v2
     with:
       dotnet-version: 5.0.x
